Change tooltip class from .bottom to .bottom-left to correctly reflect new alignment

--- a/app/scss/partials/_tooltip.scss
+++ b/app/scss/partials/_tooltip.scss
@@ -68,7 +68,7 @@
 				margin-left: 75px;
 			}
 		}
-		&.bottom {
+		&.bottom-left {
 			width: 105px;
 			top: 97%;
 			left: -75px;
